--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Zavtaracast Gamer Rage",
-  "description": "Add gamer rage to dtf new title",
+  "name": "Zavtrachat Gamer Rage",
+  "description": "Add gamer rage to dtf news title",
   "version": "1.0",
   "manifest_version": 2,
   "icons": {
